--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,158 @@
 streamlit
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+audioop-lts==0.2.1
+beautifulsoup4==4.13.4
+blinker==1.9.0
+blis==1.3.0
+cachetools==6.1.0
+catalogue==2.0.10
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.21.1
+colorama==0.4.6
+comtypes==1.4.10
+confection==0.1.5
+contourpy==1.3.2
+cycler==0.12.1
+cymem==2.0.11
+decorator==5.2.1
+distlib==0.3.9
+distro==1.9.0
+docopt==0.6.2
+edge-tts==7.0.2
+et_xmlfile==2.0.0
+filelock==3.18.0
+Flask==3.1.0
+fonttools==4.59.0
+frozenlist==1.7.0
+gitdb==4.0.12
+GitPython==3.1.44
+gTTS==2.5.4
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+Js2Py==0.74
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+MouseInfo==0.1.3
+moviepy==2.2.1
+multidict==6.6.3
+murmurhash==1.0.13
+narwhals==1.43.1
+nltk==3.9.1
+numpy==2.2.4
+openai==1.75.0
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.3.0
+pillow==11.2.1
+pipwin==0.5.2
+platformdirs==4.3.8
+playsound==1.2.2
+plyer==2.1.0
+preshed==3.0.10
+proglog==0.1.12
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+pyarrow==20.0.0
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+pydantic==2.11.3
+pydantic_core==2.33.1
+pydeck==0.9.1
+pygame==2.6.1
+PyGetWindow==0.0.9
+Pygments==2.19.2
+pyjsparser==2.7.1
+PyMsgBox==1.0.9
+pyparsing==3.2.3
+pyperclip==1.9.0
+pypiwin32==223
+PyPrind==2.11.3
+PyRect==0.2.0
+PyScreeze==1.0.1
+pySmartDL==1.3.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pyttsx3==2.98
+pytube==15.0.0
+pytweening==1.2.0
+pytz==2025.2
+pywhatkit==5.4
+pywin32==310
+qrcode==8.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+rpds-py==0.25.1
+scikit-learn==1.7.1
+scipy==1.16.1
+seaborn==0.13.2
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SpeechRecognition==3.14.2
+srsly==2.5.1
+srt==3.5.3
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+streamlit==1.46.0
+tabulate==0.9.0
+tenacity==9.1.2
+textblob==0.19.0
+thinc==8.3.6
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5.1
+tqdm==4.67.1
+typer==0.16.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+virtualenv==20.31.2
+wasabi==1.1.3
+watchdog==6.0.0
+weasel==0.4.1
+Werkzeug==3.1.3
+wikipedia==1.4.0
+workbook==1.1
+wrapt==1.17.2
+xlrd==2.0.2
+xlutils==2.0.0
+xlwt==1.3.0
+yarl==1.20.1
+yt-dlp==2025.6.30
